<package>
  <name>nturt_push_to_control_tower</name>
  <version>0.5.0</version><!--major.minor.patch-->
  <description>push to control tower</description>
  <maintainer email="kuojack0114@gmail.com">Chemmy-Jack</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nturt_can_parser</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>can_msgs</build_depend>
  <run_depend>nturt_can_parser</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>can_msgs</run_depend>
</package>
